--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "vercel": "^48.10.3"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
